--- a/index.html
+++ b/index.html
@@ -8,100 +8,116 @@
 </head>
 <body>
 	<div class="container">
-	
 	<div class="topnav" id="myTopnav">
-	  <a href="#" class="caption">Start Bootstrap</a>
-	  <a href="#Portfolio" class="menu">Portfolio</a>
-	  <a href="#About" class="menu">About</a>
-	  <a href="#Contact" class="menu">Contact</a>
-	  <a href="javascript:void(0);" class="icon menu" onclick="menuclick()">
-	    MENU <i class="fa fa-bars"></i>
-	  </a>
+		<div class="align">
+			<a href="#" class="caption">Start Bootstrap</a>
+			<a href="#Portfolio" class="menu">Portfolio</a>
+			<a href="#About" class="menu">About</a>
+			<a href="#Contact" class="menu">Contact</a>
+			<a href="javascript:void(0);" class="icon menu" onclick="menuclick()">
+			    MENU <i class="fa fa-bars"></i>
+			</a>
+		</div>
 	</div>
 	<div class="intro">
-		<div class="intro_img">
-			<img  srcset="img/prof2.png 796w, img/pic1.png 1838w"  src="img/pic1.png" width="250" height="250">
+		<div class="align">
+			<div class="intro_img">
+				<img  srcset="img/prof2.png 796w, img/pic1.png 1838w"  src="img/pic1.png" width="250" height="250">
+			</div>
+			<div class="intro_content">
+				<h1>START BOOTSTRAP</h1>
+				<img src="img/star.png"  alt="White Star" width="250" height="60" />
+				<p>Web Developer - Graphic Artist - User Experience Designer</p>
+			</div>
 		</div>
-		<div class="intro_content">
-			<h1>START BOOTSTRAP</h1>
-			<img src="img/star.png"  alt="White Star" width="250" height="60" />
-			<p>Web Developer - Graphic Artist - User Experience Designer</p>
-
-		</div>
+		
 	</div>
 	<div class="portfolio">
-		<div class="portfolio_img">
+		<div class="align">
+			<div class="portfolio_img">
 			<h1>PORTFOLIO</h1>
 			<img src="img/bstar.png" alt="Black Star" width="300" height="70" />
+			</div>
+			<div class="portfolio_row">
+				<img src="img/pic2.jpg" alt="second image">
+				<img src="img/pic3.jpg" alt="third image">
+				<img src="img/pic4.jpg" alt="forth image">
+			</div>
+			<div class="portfolio_row">
+				<img src="img/pic5.jpg" alt="second image">
+				<img src="img/pic6.jpg" alt="third image">
+				<img src="img/pic7.jpg" alt="forth image">
+			</div>
 		</div>
-		<div class="portfolio_row">
-			<img src="img/pic2.jpg" alt="second image">
-			<img src="img/pic3.jpg" alt="third image">
-			<img src="img/pic4.jpg" alt="forth image">
-		</div>
-		<div class="portfolio_row">
-			<img src="img/pic5.jpg" alt="second image">
-			<img src="img/pic6.jpg" alt="third image">
-			<img src="img/pic7.jpg" alt="forth image">
-		</div>
+		
 	</div>
 	<div class="about">
-		<div>
+		<div class="align">
+			<div>
 			<h1>ABOUT</h1>
 			<img src="img/star.png" alt="White Star" width="250" height="60" />
-		</div>
-		<div class="about_content">
-			<p>Freelancer is a free bootstrap theme created by Start Boostrap.The download includes the complete source files including HTML, CSS and Javascript as well as optonal LESS stylesheets for easy customization.</p>
-			<p>Whether you're a student looking to showcase your work, a profesional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point</p>
-		</div>
-		<div class="about_btn">
-			<a href="#" ><i class="fa fa-download" aria-hidden="true"></i>&nbsp;
-  Download Now!</a>
+			</div>
+			<div class="about_content">
+				<p>Freelancer is a free bootstrap theme created by Start Boostrap.The download includes the complete source files including HTML, CSS and Javascript as well as optonal LESS stylesheets for easy customization.</p>
+				<p>Whether you're a student looking to showcase your work, a profesional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point</p>
+			</div>
+			<div class="about_btn">
+				<a href="#" ><i class="fa fa-download" aria-hidden="true"></i>&nbsp;
+	  Download Now!</a>
+			</div>
 		</div>
 		
 	</div>
 	<div class="contact">
-		<div>
+		<div class="align">
+			<div>
 			<h1>CONTACT ME</h1>
 			<img src="img/bstar.png" alt="Black Star" width="300" height="70" />
-		</div>
-		<div class="contact_detail">
-			<form>
-				<input type="text" name="name" placeholder="Name" class="field">
-				<input type="email" name="email" placeholder="Email Address" class="field">
-				<input type="number" name="number" placeholder="Phone Number" class="field">
-				<input type="text" name="msg" id="msg" placeholder="Message" class="field"> 
-			</form>
-			<div class="btnsend">
-				<a href="#send">Send</a>
+			</div>
+			<div class="contact_detail">
+				<form>
+					<input type="text" name="name" placeholder="Name" class="field">
+					<input type="email" name="email" placeholder="Email Address" class="field">
+					<input type="number" name="number" placeholder="Phone Number" class="field">
+					<input type="text" name="msg" id="msg" placeholder="Message" class="field"> 
+				</form>
+				<div class="btnsend">
+					<a href="#send">Send</a>
+				</div>
 			</div>
 		</div>
 		
 	</div>
 	<div class="footer">
-		<div class="sec">
+		<div class="align">
+			<div class="sec">
 			<h3>LOCATION</h3>
 			<p>2215 John Daniel Drive<br>
 			Clark,MO 65243</p>
-		</div>
-		<div class="sec" >
-			<h3>AROUND THE WEB</h3>
-			<div class="links">
-				<i class="fa fa-envelope"></i>
-				<i class="fa fa-google-plus" aria-hidden="true"></i>
-				<i class="fa fa-twitter" aria-hidden="true"></i>
-				<i class="fa fa-linkedin" aria-hidden="true"></i>
-				<i class="fa fa-instagram" aria-hidden="true"></i>
 			</div>
+			<div class="sec" >
+				<h3>AROUND THE WEB</h3>
+				<div class="links">
+					<i class="fa fa-envelope"></i>
+					<i class="fa fa-google-plus" aria-hidden="true"></i>
+					<i class="fa fa-twitter" aria-hidden="true"></i>
+					<i class="fa fa-linkedin" aria-hidden="true"></i>
+					<i class="fa fa-instagram" aria-hidden="true"></i>
+				</div>
 
+			</div>
+			<div class="sec">
+				<h3>ABOUT FREELANCER</h3>
+				<p>Freelancer is a free to use,open source <br>Bootstrap theme created by <span><a href="#">Start <br> Bootstrap</a></span></p>
+			</div>
 		</div>
-		<div class="sec">
-			<h3>ABOUT FREELANCER</h3>
-			<p>Freelancer is a free to use,open source <br>Bootstrap theme created by <span><a href="#">Start <br> Bootstrap</a></span></p>
-		</div>
+		
 	</div>
 	<div class="credit">
-		<p>Copyright &copy; Your Website 2019</p>
+		<div class="align">
+			<p>Copyright &copy; Your Website 2019</p>
+		</div>
+		
 	</div>
 	</div>
 	<script>
