--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<div class="topnav" id="myTopnav">
 		<div class="align">
 			<a href="#" class="caption">Start Bootstrap</a>
-			<a href="#Portfolio" class="menu">Portfolio</a>
+			<a href="#Portfolio" class="menu">Contact</a>
 			<a href="#About" class="menu">About</a>
-			<a href="#Contact" class="menu">Contact</a>
+			<a href="#Contact" class="menu">Portfolio</a>
 			<a href="javascript:void(0);" class="icon menu" onclick="menuclick()">
 			    MENU <i class="fa fa-bars"></i>
 			</a>
